--- a/pages/User/profile.twig
+++ b/pages/User/profile.twig
@@ -11,8 +11,8 @@
 
                 <p class="text-muted text-center">{{usergroup|join(',',' and ')}}</p>
 
-                <button class="btn btn-primary btn-block" @click="onResetPassword">Reset passsword</button>
-                <a class="btn btn-primary btn-block" href="User/2step">2 step verfication</a>
+                <button class="btn btn-primary btn-block" @click="onResetPassword">{{'Reset passsword'|trans}}</button>
+                <a class="btn btn-primary btn-block" href="User/2step">{{'2 step verfication'|trans}}</a>
                 <a class="btn btn-primary btn-block" href="User/2step_whitelist">2 step verfication ip white list</a>
                 <button class="btn btn-primary btn-block" @click="createWebAuthn">Web Authentication</button>
             </div>
