--- a/pages/ACL/edit.twig
+++ b/pages/ACL/edit.twig
@@ -2,9 +2,8 @@
     <card>
         <card-body>
             <form>
-
                 <div class="form-group">
-                    <label>Module</label>
+                    <label>{{'Module'|trans}}</label>
                     <select class="form-control form-control-sm" v-model="module">
                         <option></option>
                         <option v-for="m in modules" :value="m" v-text="m.name"></option>
@@ -12,14 +11,14 @@
                 </div>
 
                 <div class="form-group">
-                    <label>User group</label>
+                    <label>{{'User group'|trans}}</label>
                     <select class="form-control form-control-sm" v-model="usergroup" @change="changeUserGroup">
                         <option v-for="ug in usergroups" :value="ug" v-text="ug.name"></option>
                     </select>
                 </div>
 
                 <div class="form-group">
-                    <label>User</label>
+                    <label>{{'User'|trans}}</label>
                     <select class="form-control form-control-sm" v-model="user" @change="changeUser">
                         <option v-for="u in users" :value="u" v-text="u.first_name + ' ' + u.last_name + ' (' + u.username + ')'"></option>
                     </select>
