--- a/pages/Translate/all.twig
+++ b/pages/Translate/all.twig
@@ -2,7 +2,7 @@
     <card>
         <card-body>
             <div class="form-group">
-                <label>Module</label>
+                <label>{{'Module'|trans}}</label>
                 <select class="form-control" v-model="module" @change="changeModule">
                     <option></option>
                     <option v-for="m in modules" v-text="m.name"></option>
