--- a/template/master.twig
+++ b/template/master.twig
@@ -183,13 +183,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
 
+                {#
                 <!-- Messages Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-comments"></i>
                         <!-- span class="badge badge-danger navbar-badge">3</span -->
                     </a>
-                    {#
+                 
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         <a href="#" class="dropdown-item">
                             <!-- Message Start -->
@@ -241,9 +242,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
                     </div>
-                    #}
+                    
                 </li>
+                #}
                 <!-- Notifications Dropdown Menu -->
+                {#
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
@@ -270,6 +273,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
                 </li>
+                #}
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="fa fa-user"></i>
@@ -282,6 +286,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         {% if app.user.isAdmin %}
                         <a href="System/viewas" class="dropdown-item">
                             <i class="fa fa-fw fa-eye mr-2"></i> {{'View as'|trans}}
+                        </a>
+                        {% endif %}
+
+                        {% if allow_cancel_viewas %}
+                        <a href="cancel_viewas" class="dropdown-item">
+                            <i class="fa fa-fw fa-eye mr-2"></i> {{'Cancel View as'|trans}}
                         </a>
                         {% endif %}
 
@@ -478,7 +488,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0 text-dark">{{header.title}}</h1>
+                            <h1 class="m-0 text-dark">{{header.title|trans}}</h1>
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
