--- a/pages/index.twig
+++ b/pages/index.twig
@@ -20,6 +20,8 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
+    <script src="{{system_base}}/plugins/regenerator-runtime/runtime.min.js"></script>
+
 </head>
 
 <body class="hold-transition login-page">
@@ -114,7 +116,7 @@
     <!-- r-webauthn -->
     <script src="{{composer_base}}/vendor/mathsgod/r-webauthn/dist/main.js"></script>
 
-    <script src="{{system_base}}/src/index.js"></script>
+    <script src="{{system_base}}/dist/index.js"></script>
 
 </body>
 
