--- a/template/master.twig
+++ b/template/master.twig
@@ -44,8 +44,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="{{system_base}}/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
 
+    <!-- Regenerator -->
+    <script src="{{system_base}}/plugins/regenerator-runtime/runtime.min.js"></script>
+
     <!-- VUE-->
+    {% if app.config.user.development %}
     <script src="{{system_base}}/plugins/vue/vue.js"></script>
+    {% else %}
+    <script src="{{system_base}}/plugins/vue/vue.min.js"></script>
+    {% endif %}
     <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
     <script src="{{system_base}}/js/vue-gql.js"></script>
 
@@ -126,7 +133,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     {% endfor %}
 
-    <script src="{{system_base}}/src/api.js" defer></script>
+    <script src="{{system_base}}/dist/api.js" defer></script>
 
     <script src="{{system_base}}/js/sidebar.js" defer></script>
     <script src="{{system_base}}/js/control-sidebar.js" defer></script>
@@ -143,7 +150,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/plugins/fancybox/jquery.fancybox.min.js" defer></script>
 
     <!-- Vue dialog -->
-    <script src="{{system_base}}/src/vue.dialog.js" defer></script>
+    <script src="{{system_base}}/dist/vue.dialog.js" defer></script>
 
     <!-- SweetAlert2 -->
     <script src="{{system_base}}/plugins/sweetalert2/sweetalert2.min.js" defer></script>
