--- a/template/master.twig
+++ b/template/master.twig
@@ -348,7 +348,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <!-- Brand Logo -->
             {% if app.config.user.logo %}
             <a href="#" class="brand-link">
-                <img src="{{app.config.user.logo}}" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <img src="{{app.config.user.logo}}" alt="Logo" class="brand-image {# img-circle elevation-3 #}" style="opacity: .8">
                 <span class="brand-text font-weight-light">{{app.config.user.company}}</span>
             </a>
             {% else %}
