--- a/template/master.twig
+++ b/template/master.twig
@@ -114,6 +114,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
+    <!-- tempusdominus-bootstrap4 -->
+    <link rel="stylesheet" href="{{system_base}}/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" />
+    <script type="text/javascript" src="{{system_base}}/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js" defer></script>
+
     <!-- plugins -->
     {% for plugin in plugins %}
     {% for js in plugin.setting.js %}
