--- a/template/master.twig
+++ b/template/master.twig
@@ -144,6 +144,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/plugins/fancybox/jquery.fancybox.min.js" defer></script>
 
     <!-- webpack -->
+    <script src="{{system_base}}/dist/api.js" defer></script>
     <script src="{{system_base}}/dist/main.js" defer></script>
 
     <!-- SweetAlert2 -->
