--- a/pages/index.twig
+++ b/pages/index.twig
@@ -111,7 +111,7 @@
     <!-- Vue -->
     <script src="{{system_base}}/plugins/vue/vue.js"></script>
     <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
-    <script src="{{system_base}}/src/vue-gql.js"></script>
+    <script src="{{system_base}}/plugins/vue/vue-gql.js"></script>
 
     <!-- r-webauthn -->
     <script src="{{composer_base}}/vendor/mathsgod/r-webauthn/dist/main.js"></script>
