--- a/template/master.twig
+++ b/template/master.twig
@@ -144,8 +144,20 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/plugins/fancybox/jquery.fancybox.min.js" defer></script>
 
     <!-- webpack -->
+
+    {% if app.config.user.development %}
+    <script src="{{system_base}}/src/api.js" defer></script>
+    <script src="{{system_base}}/src/control-sidebar.js" defer></script>
+    <script src="{{system_base}}/src/sidebar.js" defer></script>
+    <script src="{{system_base}}/src/tab-ajax.js" defer></script>
+    <script src="{{system_base}}/src/default.js" defer></script>
+    <script src="{{system_base}}/src/confirm.js" defer></script>
+    <script src="{{system_base}}/src/vue.dialog.js" defer></script>
+    <script src="{{system_base}}/node_modules/x-html-bs4/dist/x-html-bs4.umd.js" defer></script>
+    {% else %}
     <script src="{{system_base}}/dist/api.js" defer></script>
     <script src="{{system_base}}/dist/main.js" defer></script>
+    {% endif %}
 
     <!-- SweetAlert2 -->
     <script src="{{system_base}}/plugins/sweetalert2/sweetalert2.min.js" defer></script>
