--- a/template/master.twig
+++ b/template/master.twig
@@ -12,7 +12,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <meta name="robots" content="noindex, nofollow">
     <base href="{{base}}" />
 
-    <title>{{app.config.user.company}} | {{module.name}}</title>
+    <title>{{app.config.user.company}} | {{module.name|trans}} | {{page.name}}</title>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="{{composer_base}}/vendor/fortawesome/font-awesome/css/all.min.css">
@@ -375,7 +375,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 
             <!-- Sidebar -->
-            <div class="sidebar">
+            <div class="sidebar" id="nav-sidebar">
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
@@ -385,9 +385,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <a href="User/profile" class="d-block">{{app.user.first_name}} {{app.user.last_name}}</a>
                     </div>
                 </div>
+                <div class="input-group">
+                    <input type="text" placeholder="Search..." class="form-control form-control-sm" v-model="q">
+                </div>
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar nav-flat flex-column nav-child-indent nav-compact" data-widget="treeview" role="menu" data-accordion="false" id="nav-sidebar">
+                    <ul class="nav nav-pills nav-sidebar nav-flat flex-column nav-child-indent nav-compact" data-widget="treeview" role="menu" data-accordion="false">
 
 
                         <li class="nav-item has-treeview">
@@ -526,12 +529,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">{{'Home'|trans}}</a></li>
+                                <li class="breadcrumb-item"><a href="">{{'Home'|trans}}</a></li>
                                 {% if module %}
                                 <li class="breadcrumb-item active"><a href="{{module.name}}">{{module.name|trans}}</a></li>
                                 {% endif %}
 
-                                <li class="breadcrumb-item active"><a href="#">{{header.title}}</a></li>
+                                {% if page.name != "index" %}
+                                <li class="breadcrumb-item active"><a href="javascript:location.reload()">{{page.name}}</a></li>
+                                {% endif %}
+
 
                             </ol>
                         </div><!-- /.col -->
