plugin no defer

--- a/template/master.twig
+++ b/template/master.twig
@@ -158,8 +158,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/dist/main.js" defer></script>
     {% endif %}
 
-    <script src="{{system_base}}/dist/plugin.js" defer></script>
-
+    <script src="{{system_base}}/dist/plugin.js"></script>
 
     <!-- SweetAlert2 -->
     <script src="{{system_base}}/plugins/sweetalert2/sweetalert2.min.js" defer></script>
