--- a/pages/System/formbuilder.twig
+++ b/pages/System/formbuilder.twig
@@ -1,22 +1,31 @@
-<script src="composer/vendor/kevinchappell/form-builder/dist/form-builder.min.js"></script>
-{{form1|raw}}
+<script src="plugins/form-builder/form-builder.min.js"></script>
+<script src="plugins/form-builder/control_plugins/select2.js"></script>
 <div id="fb-editor"></div>
 
 <script>
+
+
     $(function ($) {
         var editor = document.getElementById('fb-editor');
-        var fb = $(editor).formBuilder();
-
-        fb.promise.then(fb => {
-            $(editor).find(".save-template").on("click", function () {
-                //console.log(fb.formData);
-                $.post("System/formbuilder",{
-                    name:$("input[name='name']").val(),
-                    content:fb.formData
-                }).success(function(){
-
-                });
-            });
+        var fb = $(editor).formBuilder({
+            controlOrder: [
+                'select2',
+                'text',
+                'textarea',
+                'textarea.tinymce'
+            ]
         });
+
+        /* fb.promise.then(fb => {
+             $(editor).find(".save-template").on("click", function () {
+                 //console.log(fb.formData);
+                 $.post("System/formbuilder", {
+                     name: $("input[name='name']").val(),
+                     content: fb.formData
+                 }).success(function () {
+ 
+                 });
+             });
+         });*/
     });
 </script>
