--- a/pages/ACL/edit.twig
+++ b/pages/ACL/edit.twig
@@ -177,7 +177,7 @@
             actionChecked(a) {
                 let p = {};
                 if (this.module) {
-                    p.module = this.module.name;
+                    p.module = this.module.class;
                 }
 
                 if (this.usergroup) {
@@ -198,7 +198,7 @@
             getValue() {
                 let p = {};
                 if (this.module) {
-                    p.module = this.module.name;
+                    p.module = this.module.class;
                 }
 
                 if (this.usergroup) {
