--- a/pages/User/profile.twig
+++ b/pages/User/profile.twig
@@ -1,3 +1,5 @@
+<script src="{{composer_base}}/vendor/mathsgod/r-webauthn/dist/main.js"></script>
+
 <div class="row">
     <div class="col-md-3" id="div1">
 
