--- a/template/master.twig
+++ b/template/master.twig
@@ -153,7 +153,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/src/default.js" defer></script>
     <script src="{{system_base}}/src/confirm.js" defer></script>
     <script src="{{system_base}}/src/vue.dialog.js" defer></script>
-    
+
     {% else %}
     <script src="{{system_base}}/dist/main.js" defer></script>
     {% endif %}
@@ -330,7 +330,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="dropdown-divider"></div>
 
                         <!-- LANGUAGE -->
-                        {% for key,lang in app.config.language %}
+                        {% for key,lang in app.config.system.language %}
                         <a href="User/setting?language={{key}}" class="dropdown-item">
                             {{lang}}
                             {% if key == app.user.language %}
