--- a/pages/User/test.twig
+++ b/pages/User/test.twig
@@ -1,15 +1,10 @@
-<input id="d1" data-provide="datepicker"/>
+<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+<div id="div1">
+    <el-input></el-input>
+</div>
 <script>
-
-    $(() => {
-        //$('#d1').datetimepicker();
+    var vm = new Vue({
+        el: "#div1"
     });
+
 </script>
-
-<a data-fancybox="gallery" href="big_1.jpg">
-    <img src="small_1.jpg">
-</a>
-
-<a data-fancybox="gallery" href="big_2.jpg">
-    <img src="small_2.jpg">
-</a>
