--- a/template/master.twig
+++ b/template/master.twig
@@ -166,6 +166,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/dist/app.js" defer></script>
 
     <script src="{{system_base}}/dist/plugin.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{system_base}}/dist/element-ui/lib/theme-chalk/index.css" />
 
 
 
