--- a/pages/User/test.twig
+++ b/pages/User/test.twig
@@ -1,10 +1,40 @@
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 <div id="div1">
-    <el-input></el-input>
+
+    <el-input placeholder="pleae input" v-model="input1"></el-input>
+    <el-input-number v-model="num" @change="handleChange" :min="1" :max="10"></el-input-number>
+    <el-select v-model="value" placeholder="Select">
+        <el-option v-for="item in options" :key="item.value" :label="item.label" :value="item.value">
+        </el-option>
+    </el-select>
 </div>
 <script>
     var vm = new Vue({
-        el: "#div1"
+        el: "#div1",
+        data: {
+            input1: 'input1',
+            num: 1,
+            options: [{
+                value: 'Option1',
+                label: 'Option1'
+            }, {
+                value: 'Option2',
+                label: 'Option2'
+            }, {
+                value: 'Option3',
+                label: 'Option3'
+            }, {
+                value: 'Option4',
+                label: 'Option4'
+            }, {
+                value: 'Option5',
+                label: 'Option5'
+            }],
+            value: ''
+        }, methods: {
+            handleChange(value) {
+                console.log(value)
+            }
+        }
     });
 
 </script>
