--- a/pages/User/test.twig
+++ b/pages/User/test.twig
@@ -1,8 +1,9 @@
 <div id="div1">
 
+    <el-date-picker name="date1" format="yyyy-MM-dd"></el-date-picker>
     <el-input placeholder="pleae input" v-model="input1"></el-input>
-    <el-input-number v-model="num" @change="handleChange" :min="1" :max="10"></el-input-number>
-    <el-select v-model="value" placeholder="Select">
+    <el-input-number v-model="num" @change="handleChange" :min="-999" :max="10"></el-input-number>
+    <el-select v-model="value" placeholder="Select" filterable>
         <el-option v-for="item in options" :key="item.value" :label="item.label" :value="item.value">
         </el-option>
     </el-select>
