--- a/pages/Fileman/index.twig
+++ b/pages/Fileman/index.twig
@@ -2,6 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.5.1/vue-resource.min.js" integrity="sha256-e9WxLR4DOP5XKMT4mflXVovZS4mVdiMkAFSDHF+6q80=" crossorigin="anonymous"></script>
 <script src="/alt3/pages/Fileman/alt-fileman/dist/fileman.umd.js"></script>
 <link rel="stylesheet" href="/alt3/pages/Fileman/alt-fileman/dist/fileman.css">
 
@@ -12,11 +13,6 @@
 <script>
     Vue.component("a-fileman", window.fileman.default);
     var vm = new Vue({
-        el: "#div1"
-
-
+        el: "#div1",
     });
-
-
-
 </script>
