update fileman base path

--- a/pages/Fileman/index.twig
+++ b/pages/Fileman/index.twig
@@ -1,6 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
-<script src="/alt3/pages/Fileman/alt-fileman/dist/fileman.umd.js"></script>
-<link rel="stylesheet" href="/alt3/pages/Fileman/alt-fileman/dist/fileman.css">
+<script src="{{system_base}}/pages/Fileman/alt-fileman/dist/fileman.umd.js"></script>
+<link rel="stylesheet" href="{{system_base}}/pages/Fileman/alt-fileman/dist/fileman.css">
 
 
 <div id="div1">
