--- a/pages/User/test.twig
+++ b/pages/User/test.twig
@@ -1,41 +1,23 @@
 <div id="div1">
 
-    <el-date-picker name="date1" format="yyyy-MM-dd"></el-date-picker>
+    <form method="post">
+
+
+        <card>
+            <card-body>
+                <date-picker name="date1" value="2020-04-23"></date-picker>
+            </card-body>
+        </card>
+
+        <button type="submit">submit</button>
+    </form>
+
+
+    <!-- el-date-picker name="date1" format="yyyy-MM-dd"></el-date-picker>
     <el-input placeholder="pleae input" v-model="input1"></el-input>
     <el-input-number v-model="num" @change="handleChange" :min="-999" :max="10"></el-input-number>
     <el-select v-model="value" placeholder="Select" filterable>
         <el-option v-for="item in options" :key="item.value" :label="item.label" :value="item.value">
         </el-option>
-    </el-select>
+    </el-select -->
 </div>
-<script>
-    var vm = new Vue({
-        el: "#div1",
-        data: {
-            input1: 'input1',
-            num: 1,
-            options: [{
-                value: 'Option1',
-                label: 'Option1'
-            }, {
-                value: 'Option2',
-                label: 'Option2'
-            }, {
-                value: 'Option3',
-                label: 'Option3'
-            }, {
-                value: 'Option4',
-                label: 'Option4'
-            }, {
-                value: 'Option5',
-                label: 'Option5'
-            }],
-            value: ''
-        }, methods: {
-            handleChange(value) {
-                console.log(value)
-            }
-        }
-    });
-
-</script>
