--- a/pages/User/reset_password.twig
+++ b/pages/User/reset_password.twig
@@ -1,7 +1,45 @@
+<div id="div1">
+    <el-form ref="form" :model="form" method="POST">
+        <card primary outline>
+            <card-body>
+                <el-form-item label="New password" prop="password" :rules="[
+                    {required:true,trigger:'change'},
+                    {min:6}
+                ]">
+                    <el-input v-model="form.password" name="password" show-password></el-input>
+                </el-form-item>
+                <el-form-item label="Retype password" prop="password2" :rules="[
+                    {validator:validatePass2,trigger:'blue'}
+                ]">
+                    <el-input v-model="form.password2" show-password></el-input>
+                </el-form-item>
+            </card-body>
+            <card-footer>
+                <el-button type="success" icon="fa fa-check" native-type="submit" @click.prevent="onSubmit"> Submit
+                </el-button>
+            </card-footer>
+        </card>
+    </el-form>
+</div>
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        $("[name='password2']").rules("add", {
-            equalTo: "#password"
-        });
+    new Vue({
+        el: "#div1",
+        data: {
+            form: {}
+        }, methods: {
+            async onSubmit() {
+                if (await this.$refs.form.validate()) {
+                    this.$refs.form.$el.submit();
+                }
+            }, validatePass2(rule, value, callback) {
+                if (value === '') {
+                    callback(new Error('Please input the password again'));
+                } else if (value !== this.form.password) {
+                    callback(new Error('Two inputs don\'t match!'));
+                } else {
+                    callback();
+                }
+            }
+        }
     });
 </script>
