--- a/pages/User/reset_password.twig
+++ b/pages/User/reset_password.twig
@@ -1,7 +1,8 @@
+{% verbatim %}
 <div id="div1">
-    <el-form ref="form" :model="form" method="POST">
-        <card primary outline>
-            <card-body>
+    <card primary outline>
+        <card-body>
+            <el-form ref="form" :model="form" method="POST" label-width="auto">
                 <el-form-item label="New password" prop="password" :rules="[
                     {required:true,trigger:'change'},
                     {min:6}
@@ -13,14 +14,16 @@
                 ]">
                     <el-input v-model="form.password2" show-password></el-input>
                 </el-form-item>
-            </card-body>
-            <card-footer>
-                <el-button type="success" icon="fa fa-check" native-type="submit" @click.prevent="onSubmit"> Submit
-                </el-button>
-            </card-footer>
-        </card>
-    </el-form>
+            </el-form>
+        </card-body>
+        <card-footer>
+            <el-button type="success" icon="fa fa-check" native-type="submit" @click.prevent="onSubmit"> Submit
+            </el-button>
+            <el-button type="warning" onclick="window.history.back()"> Back</el-button>
+        </card-footer>
+    </card>
 </div>
+{% endverbatim %}
 <script>
     new Vue({
         el: "#div1",
@@ -28,8 +31,11 @@
             form: {}
         }, methods: {
             async onSubmit() {
-                if (await this.$refs.form.validate()) {
+                try {
+                    await this.$refs.form.validate();
                     this.$refs.form.$el.submit();
+                } catch (e) {
+
                 }
             }, validatePass2(rule, value, callback) {
                 if (value === '') {
