--- a/pages/User/reset_password.twig
+++ b/pages/User/reset_password.twig
@@ -17,7 +17,7 @@
             </el-form>
         </card-body>
         <card-footer>
-            <el-button type="success" icon="fa fa-check" native-type="submit" @click.prevent="onSubmit"> Submit
+            <el-button type="success" icon="fa fa-check" @click.prevent="onSubmit"> Submit
             </el-button>
             <el-button type="warning" onclick="window.history.back()"> Back</el-button>
         </card-footer>
